# openenv-laptop-audio-ns

./: .dockerignore  Dockerfile  README.md  app.py  generate_data.py  inference.py  models.py  openenv.yaml  pyproject.toml
agent/: baseline.py  grader.py
env/: data_loader.py  environment.py  models.py  reward.py  tasks.py
server/: app.py  audio_ns_environment.py
